# qbittorrent-jobs

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-entrypoint.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: docker-build.yml
qbittorrent_jobs/: hnr_tagger.py  tracker_error_tagger.py  tracker_uptime.py
